spec/fail/bad-imports.scm
(import (not a real library))
(import badthing)